# code-agent-aids

./: README.md  cookiecutter.json  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: docs.agent.md  requirements.agent.md  tests.agent.md
.github/instructions/: commit-message.instructions.md
.github/prompts/: new-feature-plan.prompt.md  refactor-service.prompt.md  review-pr.prompt.md
docs/: 02-developer-setup.md  04-prompts-and-templates.md
hooks/: post_gen_project.py
tests/: test_docs_structural.py
{{ cookiecutter.project_slug }}/: README.md  main.py
{{ cookiecutter.project_slug }}/.github/agents/: implement.agent.md  plan.agent.md  review.agent.md
{{ cookiecutter.project_slug }}/.github/prompts/: implement-from-plan.prompt.md  write-tests.prompt.md
{{ cookiecutter.project_slug }}/docs/: 01-project-overview.md  03-agents-and-instructions.md
{{ cookiecutter.project_slug }}/mcp/: analysis.json  analysis.py
